--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -12,7 +12,7 @@
      steps:
        - name: "Install sendmail"
          run: |
-           apt-get install sendemail -q -y
+           sudo apt-get install sendemail -q -y
        - name: MailSend
          run: |
            echo "actions test mail" | mail -s "actions test mail" samateen.sb@gmail.com
