--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -15,7 +15,8 @@
            sudo apt-get install sendemail -q -y
        - name: MailSend
          run: |
-           echo "actions test mail" | mail -s "actions test mail" samateen.sb@gmail.com
+           echo "127.0.0.1    localhost yourhostname" >> /etc/hosts
+           echo "actions test mail" | sendmail -s "actions test mail" samateen.sb@gmail.com
 
 
 
