--- a/.github/workflows/rae.yml
+++ b/.github/workflows/rae.yml
@@ -1,6 +1,16 @@
-on:
-  workflow_call:
 name: Run AE
+on: 
+  workflow_call:
+    inputs:
+      name: 
+        description: 'Name for greeting'
+        required: true
+        type: 'string'
+    outputs:
+      greetingMessage: 
+        description: 'Generated greeting message'
+        value: ${{ steps.greeting.outputs.message }}
+
 jobs:
   deploy:
     name: AE Runner
