--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -2,7 +2,7 @@ on:
   workflow_dispatch: 
   push:
     branches:
-    - main
+    # - main
 name: Master wrapper Workflow
 jobs:
   masterwrapper: 
