--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -12,11 +12,12 @@
      steps:
        - name: Install sendmail and send the mail
          run: |
-           sudo apt-get update
-           sudo apt-get install sendemail -q -y
-           which sendmail
-           # sudo /bin/sh -c 'echo "127.0.0.1    localhost gmail.com" >> /etc/hosts'
-           # echo "actions test mail" | sendmail -s "actions test mail" samateen.sb@gmail.com
+          sudo dpkg --add-architecture i386
+          sudo apt-get update -y
+          sudo apt-get install sendemail -q -y
+          which sendmail
+          # sudo /bin/sh -c 'echo "127.0.0.1    localhost gmail.com" >> /etc/hosts'
+          # echo "actions test mail" | sendmail -s "actions test mail" samateen.sb@gmail.com
 
 
 
