--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -14,6 +14,7 @@
          run: |
           sudo dpkg --add-architecture i386
           sudo apt-get update -y
+          sudo apt-get install -y build-essential gcc-multilib g++-multilib libsdl2-dev:i386 libsdl2-mixer-dev:i386 libsdl2-net-dev:i386 libfreetype-dev:i386 ninja-build:i386
           sudo apt-get install sendemail -q -y
           which sendmail
           # sudo /bin/sh -c 'echo "127.0.0.1    localhost gmail.com" >> /etc/hosts'
