--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -9,6 +9,8 @@
  jobs:
    send_mail: 
      runs-on: ubuntu-latest
+     container:
+      image: debian:bookworm
      steps:
        - name: Install sendmail and send the mail
          run: |
