--- a/.github/workflows/sendmail.yml
+++ b/.github/workflows/sendmail.yml
@@ -1,7 +1,7 @@
  on:
      workflow_dispatch: 
-     push:
-      branches:
+     #push:
+      #branches:
        # main
  
  name: Send mail notification
