--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -26,5 +26,5 @@ jobs:
           curl --location --request GET 'https://webhooks.fivetran.com/webhooks/62dd7221-2674-4ffc-a063-1649c7efa5a9?test=test123' \
           --header 'Content-Type: application/json' \
           --header 'X-Fivetran-Secret-Token: OuybXqRqhnC9HsHJPC+mesKGRmRVqLMN/+XK9fBwpIY' \
-          --data-raw " {'Event':${{ toJson(github) }}} "
+          --data-raw "${{ toJson(github) }}"
   
