--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: init
         run: |
-          curl --location --request GET 'https://webhooks.fivetran.com/webhooks/62dd7221-2674-4ffc-a063-1649c7efa5a9?test=test123' \
-          --header 'Content-Type: application/json' \
+          curl --location 'https://webhooks.fivetran.com/webhooks/62dd7221-2674-4ffc-a063-1649c7efa5a9' \
           --header 'X-Fivetran-Secret-Token: OuybXqRqhnC9HsHJPC+mesKGRmRVqLMN/+XK9fBwpIY' \
+          --header 'Content-Type: application/json'
           --data-raw "${{ toJson(github) }}"
   
