--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -25,7 +25,8 @@ jobs:
         env:
           G_CTX: ${{ toJson(github) }}
         run: |
-          curl --location 'https://webhooks.fivetran.com/webhooks/62dd7221-2674-4ffc-a063-1649c7efa5a9' \
+          curl --request POST \
+          --location 'https://webhooks.fivetran.com/webhooks/62dd7221-2674-4ffc-a063-1649c7efa5a9' \
           --header 'X-Fivetran-Secret-Token: OuybXqRqhnC9HsHJPC+mesKGRmRVqLMN/+XK9fBwpIY' \
           --header 'Content-Type: application/json' \
           --data-raw "$G_CTX"
