--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,8 +1,10 @@
 on:
-  workflow_dispatch: 
+  # workflow_dispatch: 
   # push:
     # branches:
     # - main
+  schedule:
+    - cron: "*/5 * * * *"
 name: Master wrapper Workflow
 jobs:
   masterwrapper: 
