--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,8 +1,8 @@
 on:
-  # workflow_dispatch: 
-  # push:
-    # branches:
-    # - main
+  workflow_dispatch: 
+  push:
+    branches:
+    - main
   # schedule:
   #   - cron: "*/10 * * * *"
 name: Master wrapper Workflow
